made team socialive init chat a link to profile + fixed alignment on chat when not signed in

--- a/app/assets/stylesheets/components/_messagechat.scss
+++ b/app/assets/stylesheets/components/_messagechat.scss
@@ -3,9 +3,19 @@
   padding: 10px;
   @media (max-width: 767px) {
     min-height: 20vh;
-    max-height: 76vh;
+    max-height: 77vh;
   }
   @media (min-width:768px) {
-    height: 76vh;
+    height: 77vh;
   }
+}
+
+.chat-fields {
+  border-style: none;
+  background-color: $gray-medium;
+  color: $gunmetal;
+  font-weight: 300;
+  margin: 1px auto;
+  padding: 8px 12px;
+  width: 100%;
 }
